# scarf

./: .gitignore  .gitmodules  Cargo.toml  README.md
error/: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs  parser.rs
parser/: Cargo.toml
parser/src/: lib.rs
parser/src/error/: parser.rs
parser/src/lexer/: mod.rs  prelude.rs
parser/src/lexer/atom/: comment.rs  mod.rs  number.rs  string.rs
parser/src/lexer/reserved/: keyword.rs  mod.rs  operator.rs
parser/src/lexer/tests/: add_one.sf  comments.sf  general_test.sf  mod.rs  number_separation.sf  real_world_test.sf
parser/src/parser/: attribute.rs  mod.rs  pattern.rs  prelude.rs  typ.rs  util.rs
parser/src/parser/expression/: mod.rs
parser/src/parser/item/: mod.rs
parser/src/parser/primitives/: attribute.rs  generics.rs  ident.rs  macros.rs  mod.rs  path.rs  pattern.rs  typ.rs
parser/src/tests/: inner_attributes.sf  mod.rs  paths.sf  patterns.sf
scarfc/: Cargo.toml
scarfc/src/: main.rs
