[package]
name = "parser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8.0"
lazy_static = "1.4.0"
cfg-if = "1.0.0"
macros = { path = "../macros" }
indoc = "1.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
