[package]
name = "scarfc"
description = "A compiler for the Scarf language"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NOTE: dtolnay/inventory or dtolnay/linkme crate for plugins?
# NOTE: dtolnay/anyhow for errors?
clap = { version = "3.1.8", features = ["derive"] }
